--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,22 @@
 
     <!-- Form for adding/updating employee -->
     <form id="employee-form">
+        <label for="employee-id">Employee ID</label>
         <input type="number" id="employee-id" placeholder="Employee ID" required>
+
+        <label for="employee-name">Employee Name</label>
         <input type="text" id="employee-name" placeholder="Employee Name">
+
+        <label for="employee-age">Employee Age</label>
         <input type="number" id="employee-age" placeholder="Employee Age">
+
+        <label for="employee-department">Employee Department</label>
         <input type="text" id="employee-department" placeholder="Employee Department">
+
+        <label for="employee-salary">Employee Salary</label>
         <input type="number" id="employee-salary" placeholder="Employee Salary">
-        <button type="submit">Add Employee</button>
+
+        <button type="submit">Add/Update Employee</button>
         <button type="button" id="update-btn">Update Employee</button>
     </form>
 
@@ -24,6 +34,10 @@
     <h2>Find Employee</h2>
     <input type="text" id="search-input" placeholder="Enter ID or Name">
     <button type="button" id="get-btn">Get Employee</button>
+
+    <h2>Delete Employee</h2>
+    <input type="number" id="delete-input" placeholder="Enter ID">
+    <button type="button" id="delete-btn">Delete Employee</button>
 
     <h2>Employee List</h2>
     <ul id="employee-list"></ul>
